Attempt to correct html and body scaling on mobile phones

--- a/generalsettings.css
+++ b/generalsettings.css
@@ -114,6 +114,8 @@
         background-size: cover;
         overflow-x: hidden;
         overflow-y: hidden;
+        height:100%;
+        min-height:100%;
     }
 
 
@@ -157,8 +159,8 @@
     body {
         background-color: transparent;
         font-family: Avenir;
-        height: 100vh;
-        width: 100vw;
+        min-height: 100%;
+        min-width: 100%;
         font-size: calc(12px + 0.2vw);
         /*font-family: "Frutiger Next LT W1G";*/
     }
